# swift-guard

./: Cargo.toml  Makefile  README.md  xdp_filter.bpf.c
.github/workflows/: ci.yml
bpf/: main.rs  xdp_filter.c
config/: swift-guard.service  swift-guard.yaml
deployments/docker/: Dockerfile
docs/: evaluation.md  poc-plan.md
include/: swift_guard.h
src/: lib.rs
src/bpf/: Makefile  Makefile.simple  xdp_filter.c
src/cli/: Cargo.toml
src/cli/src/: api.rs  main.rs  utils.rs
src/common/: Cargo.toml  api.rs  lib.rs  types.rs  utils.rs
src/daemon/: Cargo.toml
src/daemon/src/: bpf.rs  config.rs  main.rs  maps.rs  server.rs  telemetry.rs  wasm.rs
tests/integration/: test_basic_filtering.rs  test_wasm_integration.rs
tools/analysis/: analyze_performance.py
tools/bench/: basic_throughput_test.sh
wasm/: build.sh
wasm-module/: Cargo.toml
wasm/modules/: http_inspector.rs
