[package]
name = "swift-guard-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for Swift-Guard"

[[bin]]
name = "xdp-filter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
ipnet = "2.8"
chrono = "0.4"
swift-guard-common = { path = "../common" }
